<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">Corona Kavach</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="breathing_exercise">Breathing Exercise</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_to_retry">Click to retry</string>
    <string name="close">Close</string>
    <string name="code_green_txt">CODE GREEN: You are all good</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copyright_negd">Developed by National e-Governance Division, \10 Ministry of Electronics and IT, \10 Government of India.</string>
    <string name="dialog_msg_1">The application has started saving data on your mobile. Your current status is Green, so you are safe. Every hour, we\'ll automatically check your status and caution you via notifications if anyone you meet or have met before, tests positive for CoVID-19</string>
    <string name="dialog_msg_2">For best results, we recommend not closing the app completely. Viewing the app occasionally is also recommended in order to get the latest information regarding CoVID-19</string>
    <string name="dialog_set_location_msg">You are going to set your home quarantine location. This the location you would be staying in your quarantine period to keep other people safe. Don’t leave this place. You can only change this location once. We will be in touch and keep safe./n/nGet well soon</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exhale">Exhale</string>
    <string name="exhale_hold">E Hold</string>
    <string name="exhale_hold_txt">4. Exhale Hold</string>
    <string name="exhale_txt">3. Exhale</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="inhale">Inhale</string>
    <string name="inhale_hold">I Hold</string>
    <string name="inhale_hold_txt">2. Inhale Hold</string>
    <string name="inhale_txt">1. Inhale</string>
    <string name="label_disclaimer">Disclaimer:\10The app works using your GPS data and relies on your device data connectivity and hence can’t guarantee 100% accuracy as both of them are unpredictable along with your device use pattern. We try to give a caution advisory which may be taken as a precautionary step. User discretion is advised. Please read the terms &amp; conditions and privacy policy for details.</string>
    <string name="label_location_permission_text">Location Access\10\10To log your location data on this device, to be used to detect whether the device (you) came in the range of anyone who is either a host or a carrier of COVID-19. Your location data will be used if you come in the infection range of a host, to identify the relevant chain of contact. You will also be intimated about the Caution status, so that you may act accordingly. You remain anonymous to the government, server or any other third party program.\10\10 </string>
    <string name="label_not_now">Not Now</string>
    <string name="label_otp_sent_to_mobile">OTP has been sent</string>
    <string name="label_set_now">Set Now</string>
    <string name="label_storage_permission_text">Storage Access\10\10To save and process logged data on your device.</string>
    <string name="label_verification_code">Verification Code</string>
    <string name="log_out">Log Out</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="no">No</string>
    <string name="q1">Q1.</string>
    <string name="q2">Q2.</string>
    <string name="q3">Q3.</string>
    <string name="q4">Q4.</string>
    <string name="q5">Q5.</string>
    <string name="q6">Q6.</string>
    <string name="ques1">Are you facing any difficulty in breathing?</string>
    <string name="ques2">How much is your current body temperature?</string>
    <string name="ques3">Have you recently returned from any foreign country?</string>
    <string name="ques4">Are you feeling any body ache?</string>
    <string name="ques5">Do you have a dry cough or a sore throat?</string>
    <string name="ques6">Did you meet anyone who has recently traveled to any foreign country?</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="settings_text_close">Close</string>
    <string name="settings_text_exhale">Exhale</string>
    <string name="settings_text_hold">Hold</string>
    <string name="settings_text_inhale">Inhale</string>
    <string name="settings_title">Settings</string>
    <string name="start_breathing_exercise">Start Breathing Exercise</string>
    <string name="submit">Submit</string>
    <string name="upload">Upload</string>
    <string name="upload_bluetooth_data">Upload Bluetooth Data</string>
    <string name="upload_location_data">Upload Location Data</string>
    <string name="yes">Yes</string>
</resources>