<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:tag="layout/activity_form_0" android:layout_width="match_parent" android:layout_height="match_parent">
    <include android:id="@+id/layout_toolbar" android:layout_width="match_parent" android:layout_height="wrap_content" layout="@layout/toolbar"/>
    <ScrollView android:layout_width="match_parent" android:layout_height="0dp" android:fillViewport="true" app:layout_constraintBottom_toTopOf="@+id/btn_submit" app:layout_constraintTop_toBottomOf="@+id/layout_toolbar">
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/mainCl" android:layout_width="match_parent" android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/question1Cl" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="0">
                <TextView android:textSize="16sp" android:id="@+id/question1NumTv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_marginTop="16dp" android:text="@string/q1" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toTopOf="0"/>
                <TextView android:textSize="16sp" android:id="@+id/question1Tv" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/ques1" android:scrollHorizontally="false" android:inputType="textMultiLine" android:layout_marginStart="8sp" android:layout_marginEnd="8sp" app:layout_constraintLeft_toRightOf="@+id/question1NumTv" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0"/>
                <RadioGroup android:orientation="horizontal" android:id="@+id/question1Rg" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintLeft_toLeftOf="@+id/question1Tv" app:layout_constraintTop_toBottomOf="@+id/question1Tv">
                    <RadioButton android:id="@+id/question1option1Rb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/yes"/>
                    <RadioButton android:id="@+id/question1option2Rb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no"/>
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/question2Cl" android:background="@drawable/rectangle_round" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/question1Cl">
                <TextView android:textSize="16sp" android:id="@+id/question2NumTv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_marginTop="16dp" android:text="@string/q2" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toTopOf="0"/>
                <TextView android:textSize="16sp" android:id="@+id/question2Tv" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/ques2" android:scrollHorizontally="false" android:inputType="textMultiLine" android:layout_marginStart="8sp" android:layout_marginEnd="8sp" app:layout_constraintLeft_toRightOf="@+id/question2NumTv" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0"/>
                <SeekBar android:id="@+id/question2Sb" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="100sp" android:layout_marginTop="8sp" android:layout_marginRight="100sp" android:layout_marginBottom="16sp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="@+id/question2Tv" app:layout_constraintTop_toBottomOf="@+id/question2Tv"/>
                <TextView android:textSize="16dp" android:id="@+id/currTempTv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="8sp" app:layout_constraintBottom_toBottomOf="@+id/question2Sb" app:layout_constraintLeft_toRightOf="@+id/question2Sb" app:layout_constraintTop_toTopOf="@+id/question2Sb"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/question3Cl" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/question2Cl">
                <TextView android:textSize="16sp" android:id="@+id/question3NumTv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_marginTop="16dp" android:text="@string/q3" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toTopOf="0"/>
                <TextView android:textSize="16sp" android:id="@+id/question3Tv" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/ques3" android:scrollHorizontally="false" android:inputType="textMultiLine" android:layout_marginStart="8sp" android:layout_marginEnd="8sp" app:layout_constraintLeft_toRightOf="@+id/question3NumTv" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0"/>
                <RadioGroup android:orientation="horizontal" android:id="@+id/question3Rg" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintLeft_toLeftOf="@+id/question3Tv" app:layout_constraintTop_toBottomOf="@+id/question3Tv">
                    <RadioButton android:id="@+id/question3option1Rb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/yes"/>
                    <RadioButton android:id="@+id/question3option2Rb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no"/>
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/question4Cl" android:background="@drawable/rectangle_round" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/question3Cl">
                <TextView android:textSize="16sp" android:id="@+id/question4NumTv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_marginTop="16dp" android:text="@string/q4" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toTopOf="0"/>
                <TextView android:textSize="16sp" android:id="@+id/question4Tv" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/ques4" android:scrollHorizontally="false" android:inputType="textMultiLine" android:layout_marginStart="8sp" android:layout_marginEnd="8sp" app:layout_constraintLeft_toRightOf="@+id/question4NumTv" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0"/>
                <RadioGroup android:orientation="horizontal" android:id="@+id/question4Rg" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintLeft_toLeftOf="@+id/question4Tv" app:layout_constraintTop_toBottomOf="@+id/question4Tv">
                    <RadioButton android:id="@+id/question4option1Rb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/yes"/>
                    <RadioButton android:id="@+id/question4option2Rb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no"/>
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/question5Cl" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/question4Cl">
                <TextView android:textSize="16sp" android:id="@+id/question5NumTv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_marginTop="16dp" android:text="@string/q5" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toTopOf="0"/>
                <TextView android:textSize="16sp" android:id="@+id/question5Tv" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/ques5" android:scrollHorizontally="false" android:inputType="textMultiLine" android:layout_marginStart="8sp" android:layout_marginEnd="8sp" app:layout_constraintLeft_toRightOf="@+id/question5NumTv" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0"/>
                <RadioGroup android:orientation="horizontal" android:id="@+id/question5Rg" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintLeft_toLeftOf="@+id/question5Tv" app:layout_constraintTop_toBottomOf="@+id/question5Tv">
                    <RadioButton android:id="@+id/question5option1Rb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/yes"/>
                    <RadioButton android:id="@+id/question5option2Rb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no"/>
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/question6Cl" android:background="@drawable/rectangle_round" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/question5Cl">
                <TextView android:textSize="16sp" android:id="@+id/question6NumTv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_marginTop="16dp" android:text="@string/q6" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toTopOf="0"/>
                <TextView android:textSize="16sp" android:id="@+id/question6Tv" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/ques6" android:scrollHorizontally="false" android:inputType="textMultiLine" android:layout_marginStart="8sp" android:layout_marginEnd="8sp" app:layout_constraintLeft_toRightOf="@+id/question6NumTv" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0"/>
                <RadioGroup android:orientation="horizontal" android:id="@+id/question6Rg" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintLeft_toLeftOf="@+id/question6Tv" app:layout_constraintTop_toBottomOf="@+id/question6Tv">
                    <RadioButton android:id="@+id/question6option1Rb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/yes"/>
                    <RadioButton android:id="@+id/question6option2Rb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no"/>
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <androidx.appcompat.widget.AppCompatButton android:textSize="16sp" android:textColor="@android:color/white" android:id="@+id/btn_submit" android:background="@drawable/bg_primary_btn_round" android:layout_width="match_parent" android:layout_height="45dp" android:layout_marginTop="30dp" android:layout_marginBottom="20dp" android:text="@string/submit" android:textAllCaps="true" android:layout_marginStart="45dp" android:layout_marginEnd="45dp" app:layout_constraintBottom_toBottomOf="0"/>
</androidx.constraintlayout.widget.ConstraintLayout>
