<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:tag="layout/activity_more_option_0" android:layout_width="match_parent" android:layout_height="match_parent">
    <include android:id="@+id/layout_toolbar" android:layout_width="match_parent" android:layout_height="wrap_content" layout="@layout/toolbar"/>
    <TextView android:id="@+id/tv_unique_id" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:layout_below="@+id/layout_toolbar" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
    <Button android:id="@+id/breatheBtn" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:text="@string/start_breathing_exercise" android:layout_below="@+id/tv_unique_id" android:layout_marginStart="30dp" android:layout_marginEnd="30dp"/>
    <Button android:id="@+id/formBtn" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="20dp" android:text="@string/questionnaire" android:layout_below="@+id/breatheBtn" android:layout_marginStart="30dp" android:layout_marginEnd="30dp"/>
    <androidx.appcompat.widget.AppCompatButton android:textSize="16sp" android:textColor="@android:color/white" android:id="@+id/btn_logout" android:background="@drawable/bg_primary_btn_round" android:layout_width="match_parent" android:layout_height="45dp" android:layout_marginTop="30dp" android:layout_marginBottom="20dp" android:text="@string/log_out" android:layout_alignParentBottom="true" android:onClick="onClick" android:textAllCaps="true" android:layout_marginStart="30dp" android:layout_marginEnd="30dp"/>
</RelativeLayout>
