<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/lt_content" android:background="@android:color/background_light" android:padding="16dp" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="@dimen/activity_horizontal_margin" app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <TextView android:textSize="@dimen/settings_title_text_size" android:textColor="@color/colorPrimary" android:id="@+id/txt_settings" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/settings_title" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0"/>
    <RadioGroup android:orientation="horizontal" android:id="@+id/rg_gradients" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32dp" android:weightSum="6" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/txt_settings">
        <RadioButton android:id="@+id/rb_1" android:background="@drawable/bg_circle_preset_warm_flame_selector" android:layout_width="50dp" android:layout_height="50dp" android:checked="true" android:button="@null"/>
        <RadioButton android:id="@+id/rb_2" android:background="@drawable/bg_circle_preset_night_fade_selector" android:layout_width="50dp" android:layout_height="50dp" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:button="@null"/>
        <RadioButton android:id="@+id/rb_3" android:background="@drawable/bg_circle_preset_winter_neva_selector" android:layout_width="50dp" android:layout_height="50dp" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:button="@null"/>
        <RadioButton android:id="@+id/rb_4" android:background="@drawable/bg_circle_preset_morning_salad_selector" android:layout_width="50dp" android:layout_height="50dp" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:button="@null"/>
        <RadioButton android:id="@+id/rb_5" android:background="@drawable/bg_circle_preset_soft_grass_selector" android:layout_width="50dp" android:layout_height="50dp" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:button="@null" style="@style/Widget.AppCompat.CompoundButton.RadioButton"/>
    </RadioGroup>
    <LinearLayout android:orientation="vertical" android:id="@+id/lt_inhale" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="32dp" android:layout_marginRight="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/rg_gradients">
        <TextView android:textSize="@dimen/settings_text_size" android:textColor="@color/colorPrimary" android:layout_gravity="center_horizontal" android:id="@+id/txt_inhale" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/settings_text_inhale"/>
        <androidx.appcompat.widget.AppCompatSeekBar android:id="@+id/seekBar_inhale" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:max="10" android:progress="3" style="@style/Theme.SeekBar"/>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/lt_hold" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="16dp" android:layout_marginRight="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/lt_inhale">
        <TextView android:textSize="@dimen/settings_text_size" android:textColor="@color/colorPrimary" android:layout_gravity="center_horizontal" android:id="@+id/txt_hold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/settings_text_hold"/>
        <SeekBar android:id="@+id/seekBar_hold" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:max="10" android:progress="3" style="@style/Theme.SeekBar"/>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/linearLayout" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="16dp" android:layout_marginRight="16dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/lt_hold">
        <TextView android:textSize="@dimen/settings_text_size" android:textColor="@color/colorPrimary" android:layout_gravity="center_horizontal" android:id="@+id/txt_exhale" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/settings_text_exhale"/>
        <SeekBar android:id="@+id/seekBar_exhale" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:max="10" android:progress="3" style="@style/Theme.SeekBar"/>
    </LinearLayout>
    <Button android:id="@+id/btn_close" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32dp" android:text="@string/settings_text_close" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toBottomOf="@+id/linearLayout" style="@style/Theme.Button"/>
</androidx.constraintlayout.widget.ConstraintLayout>
